2012-07-12  Xingnan Wang  <xingnan.wang@intel.com>

        [IndexedDB] upperOpen set to true in lowerBound()/lowerOpen set to true in upperBound()
        https://bugs.webkit.org/show_bug.cgi?id=90867

        Reviewed by Tony Chang.

        * storage/indexeddb/keyrange-expected.txt:
        * storage/indexeddb/resources/keyrange.js:
        (checkLowerBoundKeyRange):
        (checkUpperBoundKeyRange):

2012-07-12  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [Qt] Unreviewed gardening. Skip the new failing test.

        * platform/qt/Skipped:

2012-07-12  Ádám Kallai  <kadam@inf.u-szeged.hu>

        [Qt] Unreviewed gardening. Added new platform specific expected after r122414.
        https://bugs.webkit.org/show_bug.cgi?id=91060.

        * platform/qt/fast/forms/state-restore-skip-stateless-expected.txt: Added after r122414.

2012-07-12  MORITA Hajime  <morrita@google.com>

        [Shadow DOM] <video> with <shadow> crashes
        https://bugs.webkit.org/show_bug.cgi?id=91055

        Reviewed by Kent Tamura.

        * fast/dom/shadow/insertion-point-video-crash-expected.txt: Added.
        * fast/dom/shadow/insertion-point-video-crash.html: Added.

2012-07-12  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [Qt] Unreviewed gardening. Skip new failing test introduced in r122399

        * platform/qt/Skipped:

2012-07-12  Kent Tamura  <tkent@chromium.org>

        Do not save the form state signature if nothing is saved
        https://bugs.webkit.org/show_bug.cgi?id=91050

        Reviewed by Hajime Morita.

        * fast/forms/resources/state-restore-empty-state-1.html: Added.
        * fast/forms/state-restore-empty-state-expected.txt: Added.
        * fast/forms/state-restore-empty-state.html: Added.

2012-07-11  Matt Falkenhagen  <falken@chromium.org>

        Add dialog element feature toggle to InternalSettings
        https://bugs.webkit.org/show_bug.cgi?id=90934

        Reviewed by Hajime Morita.
