@@ -1,7 +1,6 @@
-CONSOLE MESSAGE: line 1: Done.
 Tests how revision requests content if original content was not loaded yet.
 
 Bug 63631
-http://127.0.0.1:8000/inspector/network/resources/script.js
+http://127.0.0.1:8000/inspector/network/resource/style.css
 
 
