@@ -695,10 +695,6 @@ http/tests/misc/xslt-bad-import.html
 # https://bugs.webkit.org/show_bug.cgi?id=87208
 http/tests/cookies/js-get-and-set-http-only-cookie.html
 
-# REGRESSION(r122327): It made http/tests/inspector/network/network-request-revision-content.html fail on Lion, Qt
-# https://bugs.webkit.org/show_bug.cgi?id=90979
-http/tests/inspector/network/network-request-revision-content.html
-
 # =========================================================================== #
 #       Failing xmlhttprequest tests                                          #
 # =========================================================================== #
