@@ -1,3 +1,14 @@
+2012-07-12  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        REGRESSION(r122327): It made http/tests/inspector/network/network-request-revision-content.html fail on Lion, Qt
+        https://bugs.webkit.org/show_bug.cgi?id=90979
+
+        Reviewed by Pavel Feldman.
+
+        * http/tests/inspector/network/network-request-revision-content-expected.txt:
+        * http/tests/inspector/network/network-request-revision-content.html:
+        * platform/qt/Skipped:
+
 2012-07-12  Xingnan Wang  <xingnan.wang@intel.com>
 
         [IndexedDB] upperOpen set to true in lowerBound()/lowerOpen set to true in upperBound()
